--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
@@ -1,3 +1,18 @@
+<?php
+
+declare(strict_types=1);
+
+use Magento\Catalog\ViewModel\Product\Breadcrumbs;
+use Hyva\Theme\Model\ViewModelRegistry;
+use Magento\Framework\Escaper;
+
+/** @var Escaper $escaper */
+/** @var ViewModelRegistry $viewModels */
+
+$breadcrumbsViewModel = $viewModels->require(Breadcrumbs::class);
+$categoryUrlSuffix = $breadcrumbsViewModel->getCategoryUrlSuffix();
+
+?>
 <div
   x-show="categories.length"
   class="relative flex grow flex-col gap-4 p-3 pb-2 transition-opacity duration-300 md:p-5"
@@ -13,7 +28,7 @@
     >
       <template x-for="category in categories">
         <a
-          :href="`/${category.url_path}.html`"
+          :href="`/${category.url_path}<?= $escaper->escapeUrl($categoryUrlSuffix) ?>`"
           class="button button--outline-secondary"
           x-element-transition-trigger:category.animate="{
             'title': category.name,
