--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/product-sections.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/product-sections.phtml
@@ -23,7 +23,7 @@ $defaultTitleTemplate = $titleRenderer->getTemplate();
             continue;
         }
         ?>
-        <section id="<?= $escaper->escapeHtmlAttr($sectionBlock->getNameInLayout()) ?>">
+        <section x-data="Accordion('true', 300)" id="<?= $escaper->escapeHtmlAttr($sectionBlock->getNameInLayout()) ?>">
             <?=
             $titleRenderer->setTemplate($titleTemplate)
                 ->assign('sectionBlock', $sectionBlock)
