--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
@@ -21,23 +21,27 @@ $product = $block->getProduct();
 
 
 <?php if ($attributes = $block->getAdditionalData()): ?>
-    <div x-data="Accordion($store.information.isExpanded, 300)" x-effect="isExpanded = $store.information.isExpanded" class="border-black border-b">
-        <div x-ref="AccordionPanel" :inert="!isExpanded">
-            <div class="mt-3 overflow-hidden text-text-100 contrast-more:text-secondary-700">
-                <div class="table-wrapper max-w-prose overflow-x-auto" id="product-attributes">
-                    <table class="additional-attributes w-full">
-                        <?php foreach ($attributes as $attribute): ?>
-                            <tr class="border-b border-gray-300 last:border-b-0">
-                                <th class="col label w-1/2 py-2 text-left text-gray-700 font-normal product-attribute-label"
-                                    scope="row"><?= $escaper->escapeHtml($attribute['label']) ?></th>
-                                <td class="col data w-1/2 py-2 pl-2 text-left text-gray-900 product-attribute-value"
-                                    data-th="<?= $escaper->escapeHtmlAttr($attribute['label']) ?>"
-                                ><?= /* @noEscape */
-                                    $catalogOutputHelper->productAttribute($product, $attribute['value'], $attribute['code']) ?></td>
-                            </tr>
-                        <?php endforeach; ?>
-                    </table>
-                </div>
+    <div x-ref="AccordionPanel"
+         :inert="!isExpanded"
+         class="overflow-hidden"
+         x-cloak
+         id="attributes_panel"
+         role="region"
+         aria-labelledby="attributes_label">
+        <div class="mt-3 overflow-hidden text-text-100 contrast-more:text-secondary-700">
+            <div class="table-wrapper max-w-prose overflow-x-auto" id="product-attributes">
+                <table class="additional-attributes w-full">
+                    <?php foreach ($attributes as $attribute): ?>
+                        <tr class="border-b border-gray-300 last:border-b-0">
+                            <th class="col label w-1/2 py-2 text-left text-gray-700 font-normal product-attribute-label"
+                                scope="row"><?= $escaper->escapeHtml($attribute['label']) ?></th>
+                            <td class="col data w-1/2 py-2 pl-2 text-left text-gray-900 product-attribute-value"
+                                data-th="<?= $escaper->escapeHtmlAttr($attribute['label']) ?>"
+                            ><?= /* @noEscape */
+                                $catalogOutputHelper->productAttribute($product, $attribute['value'], $attribute['code']) ?></td>
+                        </tr>
+                    <?php endforeach; ?>
+                </table>
             </div>
         </div>
     </div>
