--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description.phtml
@@ -24,8 +24,15 @@ if (!$product->getDescription()) {
 $cssClasses = $block->getData('css_classes') ?? 'prose';
 
 ?>
-<div x-data="Accordion($store.description.isExpanded, 300)" x-effect="isExpanded = $store.description.isExpanded" class="border-black border-b">
-    <div x-ref="AccordionPanel" :inert="!isExpanded">
+<div class="border-black border-b">
+    <div x-ref="AccordionPanel"
+         :inert="!isExpanded"
+         class="overflow-hidden"
+         x-cloak
+         id="description_panel"
+         role="region"
+         aria-labelledby="description_label"
+    >
         <div class="rte mt-3 overflow-hidden text-text-100 contrast-more:text-secondary-700">
             <?= $productViewModel->productAttributeHtml($product, $product->getDescription(), 'description') ?>
         </div>
