INTERNAL-277: Remove bottom border from accordion and add description padding

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/default-section-title.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/default-section-title.phtml
@@ -15,8 +15,8 @@ use Magento\Framework\View\Element\AbstractBlock;
 $hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
 
-<div x-data="Accordion('true', 300)" x-effect="$store.information.isExpanded = isExpanded"
-     class="align-start animate-on-transition mb-8 flex flex-col px-4 md:p-0"
+<div
+    class="align-start animate-on-transition mb-8 flex flex-col"
 >
     <button class="flex items-center justify-between"
             type="button"
