--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description-section-title.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description-section-title.phtml
@@ -25,7 +25,7 @@ $product = $productViewModel->getProduct();
 
 ?>
 <div
-     class="align-start animate-on-transition mb-8 flex flex-col px-4 md:p-0"
+     class="align-start animate-on-transition mb-8 flex flex-col border-none"
 >
     <button class="flex items-center justify-between"
             type="button"
