--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/addtocart.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/addtocart.phtml
@@ -13,15 +13,37 @@ use Hyva\Theme\ViewModel\SvgIcons;
 $hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
 
-<div x-data="{ isVariantInCart: false, isVariantAvailable: true, isProductBeingAdded: false, isProductBeingRemoved: false }">
-    <button 
+<div x-data="{
+        isVariantInCart: false,
+        isVariantAvailable: true,
+        isProductBeingAdded: false,
+        isProductBeingRemoved: false,
+        variantCount: 1,
+        isPopup: false
+    }">
+
+    <button
         type="button"
-        x-show="(!isVariantInCart || false) && true && isVariantAvailable"
+        x-show="isVariantAvailable && (variantCount > 1) && isVariantInCart && !isPopup"
+        class="animate-on-transition button button--filled-primary w-full md:hidden"
+        @click.prevent="showProductActions()"
+    >
+        <span>
+            <?= $escaper->escapeHtml(__('Select Another Option')) ?>
+        </span>
+        <span class="button__icon button__icon--right">
+            <?= $hyvaicons->renderHtml('cart-empty'); ?>
+        </span>
+    </button>
+
+    <button
+        type="button"
+        x-show="(!isVariantInCart || isPopup) && isVariantAvailable"
         class="animate-on-transition button button--filled-primary flex-grow max-md:hidden"
         @click.prevent="addToCart()"
         x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
         :class="{
-            'max-md:hidden': (15 > 1) && (!false || (false && isVariantInCart)),
+            'max-md:hidden': (variantCount > 1) && (!isPopup || (isPopup && isVariantInCart)),
             'button--disabled': isProductBeingAdded || isProductBeingRemoved
         }"
         :disabled="isProductBeingAdded || isProductBeingRemoved"
@@ -32,19 +54,13 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 <?= $hyvaicons->renderHtml('cart-empty'); ?>
             </span>
         </span>
-        <span style="display: none" x-show="isProductBeingRemoved">
+        <span x-show="isProductBeingRemoved">
             <?= $escaper->escapeHtml(__('Removing from cart...')) ?>
         </span>
-        <span style="display: none" x-show="isProductBeingAdded">
+        <span x-show="isProductBeingAdded">
             <?= $escaper->escapeHtml(__('Adding...')) ?>
         </span>
     </button>
 </div>
-
-<script>
-function addToCart() {
-    // Your logic for adding the product to the cart goes here
-}
-</script>
 
 <?= $block->getChildHtml('', true) ?>
