INTERNAL-295: Implement structure of search fallback

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
@@ -41,12 +41,19 @@
             <block class="Magento\Framework\View\Element\Template" name="element.transition.wrapper"
                    template="Magento_Theme::html/layout/transition/element-transition-wrapper.phtml"
                    after="transition.preview"/>
-            <!-- <block class="Magento\Framework\View\Element\Template" name="search.fallback"-->
-            <!--        template="Magento_Theme::html/layout/transition/search_fallback.phtml"-->
-            <!--        after="element.transition.wrapper"/>-->
+            <block class="Magento\Framework\View\Element\Template" name="search.fallback"
+                   template="Magento_Theme::html/layout/transition/search_fallback.phtml"
+                   after="element.transition.wrapper">
+                <block class="Magento\Theme\Block\Html\Breadcrumbs" template="Magento_Theme::html/breadcrumbs.phtml"
+                       name="search.breadcrumbs.placeholder">
+                    <arguments>
+                        <argument name="isAlpineTemplate" xsi:type="boolean">true</argument>
+                    </arguments>
+                </block>
+            </block>
             <block class="Magento\Framework\View\Element\Template" name="pdp.fallback"
                    template="Magento_Theme::html/layout/transition/pdp_fallback.phtml"
-                   after="element.transition.wrapper">
+                   after="search.fallback">
                 <block class="Magento\Theme\Block\Html\Breadcrumbs" template="Magento_Theme::html/breadcrumbs.phtml"
                        name="product.breadcrumbs.placeholder">
                     <arguments>
