INTERNAL-278: Fix product details title and price alignment on mobile

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
@@ -8,8 +8,10 @@ use Magento\Catalog\Block\Product\View;
 ?>
 
 <div>
-  <?= $block->getChildHtml('product.title') ?>
-  <?= $block->getChildHtml('product.info') ?>
+    <div class="flex flex-wrap justify-between">
+        <?= $block->getChildHtml('product.title') ?>
+        <?= $block->getChildHtml('product.info') ?>
+    </div>
   <?= $block->getChildHtml('product_options_wrapper_bottom') ?>
   <?= $block->getChildHtml('product.info.details') ?>
 </div>
