--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details-info.phtml
@@ -8,7 +8,7 @@ use Magento\Catalog\Block\Product\View;
 ?>
 
 <div>
-    <div class="flex flex-wrap justify-between">
+    <div class="flex flex-wrap justify-between mb-8">
         <?= $block->getChildHtml('product.title') ?>
         <?= $block->getChildHtml('product.info') ?>
     </div>
